prepped snake for production